--- a/src/index copy.css
+++ b/src/index copy.css
@@ -26,7 +26,7 @@ body{
 }
 header{
 	grid-area: header;
-	background-color: #232f3e;
+	background-color: teal;
 }
 main{
 	grid-area: main;
@@ -67,10 +67,8 @@ img{
 	border-radius: 0.5rem;
 } 
 img.medium{
-	max-height: 100%;
-  max-width: 100%;
+	max-width: 29rem;
 	width: 100%;
-  height: 400px; /* edited by me */
 }
 .card{
 	border: 0.1rem #c0c0c0 solid;
@@ -86,18 +84,10 @@ img.medium{
 .card-body > *{
 	margin-bottom: 0.5rem;
 }
-.prod-name{
-  max-width: 25rem;
-}
-
 .price{
 	font-size: 2rem;
 }
 .rating span{
 	color: #f0c040;
 	margin:0.1rem;
-}
-.rating span:last-child{
-	margin-left: 10px;
-	color:red;
 }
