--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,38 @@ a{
 a:hover{
 	color: tomato;
 }
+ul{
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+li{
+	margin-top: 1rem;
+}
+button{
+	padding: 1rem;
+	border-radius: 0.5rem;
+	border: 0.1rem;
+	color:#a4a4a4 solid;
+	font-size: 1.6rem;
+	font-family: Arial, Helvetica, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #f8f8f8;
+	cursor: pointer;
+}
+button:hover{
+	border: 0.1rem #404040 solid;
+}
+
+button.primary{
+	background-color: #f0c040;
+}
+
+button.block{
+	width: 100%;
+}
+
 header a{
 	color: whitesmoke;
 	padding: 1rem;
@@ -59,7 +91,15 @@ a.brand{
 	justify-content: space-between;
 	align-items: center;
 }
-
+.row.top{
+	align-items: flex-start;
+}
+.col-1{
+	flex:1 1 25rem;
+}
+.col-2{
+	flex:2 1 50rem;
+}
 .row.center{
 	justify-content: center;
 }
@@ -67,10 +107,18 @@ img{
 	border-radius: 0.5rem;
 } 
 img.medium{
-	max-height: 100%;
+  max-height: 100%;
   max-width: 100%;
-	width: 100%;
+  width: 100%;
   height: 400px; /* edited by me */
+  width: 400px;
+}
+img.large{
+	max-height: 100%;
+  	max-width: 100%;
+	width: 100%;	
+	height: 600px; /* edited by me */
+ 	width: 700px;
 }
 .card{
 	border: 0.1rem #c0c0c0 solid;
@@ -78,7 +126,6 @@ img.medium{
 	border-radius: 0.5rem;
 	margin: 1rem;
 }
-
 .card-body{
 	padding: 1rem;
 }
@@ -87,9 +134,8 @@ img.medium{
 	margin-bottom: 0.5rem;
 }
 .prod-name{
-  max-width: 25rem;
+  max-width: 30rem;
 }
-
 .price{
 	font-size: 2rem;
 }
@@ -99,5 +145,11 @@ img.medium{
 }
 .rating span:last-child{
 	margin-left: 10px;
+	color:red;
+}
+.success{
+	color:green;
+}
+.error{
 	color:red;
 }
